tests/snapshots/config_tests__config_default.snap
---
source: tests/config_tests.rs
expression: config
---
{
  "sources": [],
  "feeds": [
    {
      "type": "ars_technica"
    }
  ],
  "output": {
    "filename": "daily-feed.epub",
    "title": "Daily Feed Digest",
    "author": "RSS Aggregator",
    "format": "epub"
  },
  "front_page": null,
  "reading_speed_wpm": null
}
