tests/snapshots/config_tests__config_load_from_file.snap
---
source: tests/config_tests.rs
expression: config
---
{
  "sources": [],
  "feeds": [
    {
      "type": "rss",
      "name": "File Test Feed",
      "url": "https://file.example.com/feed.xml",
      "description": "A test feed from file"
    }
  ],
  "output": {
    "filename": "file_test.epub",
    "title": "File Test Title",
    "author": "File Test Author",
    "format": "epub"
  },
  "front_page": null,
  "reading_speed_wpm": null
}
