tests/snapshots/config_tests__config_load_from_nonexistent_file.snap
---
source: tests/config_tests.rs
expression: error_message
snapshot_kind: text
---
No such file or directory (os error 2)
