tests/snapshots/config_tests__config_load_invalid_json.snap
---
source: tests/config_tests.rs
expression: error_message
snapshot_kind: text
---
expected `,` or `}` at line 7 column 17
