tests/snapshots/config_tests__config_multiple_feeds.snap
---
source: tests/config_tests.rs
expression: config
---
{
  "sources": [],
  "feeds": [
    {
      "type": "rss",
      "name": "Feed 1",
      "url": "https://feed1.example.com/feed.xml",
      "description": "First feed"
    },
    {
      "type": "rss",
      "name": "Feed 2",
      "url": "https://feed2.example.com/feed.xml",
      "description": "Second feed"
    },
    {
      "type": "ars_technica"
    }
  ],
  "output": {
    "filename": "multi_feed_test.epub",
    "title": "Multi Feed Test",
    "author": "Multi Feed Author",
    "format": "epub"
  },
  "front_page": null
}
