tests/snapshots/config_tests__config_serialization.snap
---
source: tests/config_tests.rs
expression: deserialized
---
{
  "feeds": [
    {
      "name": "Serialize Test",
      "url": "https://serialize.example.com/feed.xml",
      "description": "Test serialization"
    }
  ],
  "output": {
    "filename": "serialize_test.epub",
    "title": "Serialize Test Title",
    "author": "Serialize Test Author",
    "format": "epub"
  },
  "front_page": null
}
