tests/snapshots/config_tests__config_with_reading_speed_too_high.snap
---
source: tests/config_tests.rs
expression: error_message
---
reading_speed_wpm must be between 50 and 500, got 600
