tests/snapshots/config_tests__config_without_reading_speed.snap
---
source: tests/config_tests.rs
expression: config
---
{
  "sources": [],
  "feeds": [
    {
      "type": "rss",
      "name": "Test Feed",
      "url": "https://test.example.com/feed.xml",
      "description": "A test feed"
    }
  ],
  "output": {
    "filename": "test_output.epub",
    "title": "Test Title",
    "author": "Test Author",
    "format": "epub"
  },
  "front_page": null,
  "reading_speed_wpm": null
}
