tests/snapshots/config_tests__hackernews_config_deserialization.snap
---
source: tests/config_tests.rs
expression: config
---
{
  "sources": [
    {
      "name": "Hacker News",
      "type": "hackernews"
    }
  ],
  "feeds": [],
  "output": {
    "filename": "hackernews_test.epub",
    "title": "HN Test Title",
    "author": "HN Test Author",
    "format": "epub"
  },
  "front_page": null
}
